--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   readmore: ^3.0.0
   http: ^1.5.0
   flutter_riverpod: ^2.6.1
+  connectivity_plus: ^6.1.5
 
 dev_dependencies:
   flutter_test:
