--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   connectivity_plus: ^6.1.5
   shared_preferences: ^2.5.3
+  result_dart: ^2.1.1
 
 dev_dependencies:
   flutter_test:
